# python-bytecode-interpreter

./: .gitignore  README.md  basic-interpreter.py  pyproject.toml  setup.py
examples/: demo.py
interpreter/: pyvenv.cfg
interpreter/Scripts/: activate  activate.bat
src/: byterun_vm.py
tests/: test_vm.py
